--- a/frontend/pages/App.css
+++ b/frontend/pages/App.css
@@ -37,9 +37,16 @@ body {
 .mainBanner {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 420px;
   background: #f2f2f2;
   margin-bottom: 0;
   background-position: center;
-  background-size: 100%;
+  background-size: cover;
+}
+
+.top-to-btm {
+  position: fixed;
+  bottom: 40px;
+  right: 25px;
+  z-index: 20;
 }
