--- a/frontend/pages/App.css
+++ b/frontend/pages/App.css
@@ -34,14 +34,18 @@ body {
   flex-direction: column;
 }
 
-.mainBanner {
+.mb {
   position: relative;
   width: 100%;
-  height: 420px;
   background: #f2f2f2;
-  margin-bottom: 0;
-  background-position: center;
-  background-size: cover;
+  margin-bottom: 10px;
+}
+.mainBanner {
+  position: relative;
+  height: 420px;
+}
+.mainBanner img {
+  object-fit: fill;
 }
 
 .top-to-btm {
@@ -49,4 +53,9 @@ body {
   bottom: 40px;
   right: 25px;
   z-index: 20;
+}
+
+.site-card-wrapper {
+  padding: 10px;
+  background: #ececec;
 }
