--- a/frontend/pages/App.css
+++ b/frontend/pages/App.css
@@ -59,3 +59,19 @@ body {
   padding: 10px;
   background: #ececec;
 }
+
+.view-json-result {
+  display: block;
+  width: 100%;
+  height: 150px;
+  overflow: overlay;
+  padding: 0.25rem 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
