--- a/frontend/pages/App.css
+++ b/frontend/pages/App.css
@@ -75,3 +75,12 @@ body {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
 }
+
+.con {
+  background-color: aqua;
+  height: 100vh;
+}
+
+.con div {
+  background-color: gray;
+}
